feat: Add beacon_implementation
