# pkg/server/persistence/beacon_state.go
@@ -14,26 +14,28 @@ type BeaconState struct {
 	// We have to use int64 here as SQLite doesn't support uint64. This sucks
 	// but slot 9223372036854775808 is probably around the heat death
 	// of the universe so we should be OK.
-	Slot        int64 `gorm:"index:idx_slot,where:deleted_at IS NULL"`
-	Epoch       int64
-	StateRoot   string
-	FetchedAt   time.Time `gorm:"index"`
-	NodeVersion string    `gorm:"not null;default:''"`
-	Location    string    `gorm:"not null;default:''"`
-	Network     string    `gorm:"not null;default:''"`
+	Slot                 int64 `gorm:"index:idx_slot,where:deleted_at IS NULL"`
+	Epoch                int64
+	StateRoot            string
+	FetchedAt            time.Time `gorm:"index"`
+	BeaconImplementation string
+	NodeVersion          string `gorm:"not null;default:''"`
+	Location             string `gorm:"not null;default:''"`
+	Network              string `gorm:"not null;default:''"`
 }
 
 type BeaconStateFilter struct {
-	ID          *string
-	Node        *string
-	Before      *time.Time
-	After       *time.Time
-	Slot        *uint64
-	Epoch       *uint64
-	StateRoot   *string
-	NodeVersion *string
-	Location    *string
-	Network     *string
+	ID                   *string
+	Node                 *string
+	Before               *time.Time
+	After                *time.Time
+	Slot                 *uint64
+	Epoch                *uint64
+	StateRoot            *string
+	NodeVersion          *string
+	Location             *string
+	Network              *string
+	BeaconImplementation *string
 }
 
 func (f *BeaconStateFilter) AddID(id string) {
@@ -74,6 +76,10 @@ func (f *BeaconStateFilter) AddLocation(location string) {
 
 func (f *BeaconStateFilter) AddNetwork(network string) {
 	f.Network = &network
+}
+
+func (f *BeaconStateFilter) AddBeaconImplementation(BeaconImplementation string) {
+	f.BeaconImplementation = &BeaconImplementation
 }
 
 func (f *BeaconStateFilter) Validate() error {
@@ -128,6 +134,14 @@ func (f *BeaconStateFilter) ApplyToQuery(query *gorm.DB) (*gorm.DB, error) {
 
 	if f.Location != nil {
 		query = query.Where("location = ?", f.Location)
+	}
+
+	if f.Network != nil {
+		query = query.Where("network = ?", f.Network)
+	}
+
+	if f.BeaconImplementation != nil {
+		query = query.Where("beacon_implementation = ?", f.BeaconImplementation)
 	}
 
 	return query, nil
